# Qml-and-Cpp

./: README.md
Projects/QtQuickAboutPage/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickAgeCalculator/: CMakeLists.txt  Main.qml  calculator.cpp  calculator.hpp  main.cpp
Projects/QtQuickAlarms/: AlarmDialog.qml  CMakeLists.txt  CMakeLists.txt.user.1292764  main.cpp  main.qml
Projects/QtQuickAnimatedLogin/: CMakeLists.txt  LoginCheckBox.qml  LoginMessage.qml  LoginStack.qml  LoginTextBox.qml  Main.qml  main.cpp
Projects/QtQuickAnimatedSearchBar/: CMakeLists.txt  CustomSearchBar.qml  Main.qml  main.cpp
Projects/QtQuickAnimatedTabBar/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickBasic/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickBottomNavbarShowHide/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickButtonClickAnimation/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickButtonIcon/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickCalculatorExample/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickCalendar/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickCalendarEventDesign/: CMakeLists.txt  Main.qml  PopupTime.qml  main.cpp
Projects/QtQuickCameraPhoto/: CMakeLists.txt  CMakeLists.txt.user.1292764  backend.cpp  backend.hpp  main.cpp  main.qml
Projects/QtQuickCanvasExample/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickCanvasPaint/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickCapitalizeFirstLetter/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickColorDialog/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickColorGradient/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickConnectingRegisterType/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  main.cpp
Projects/QtQuickConnectingUsingContextProperties/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  main.cpp
Projects/QtQuickContactList/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickCoolButtonExample/: CMakeLists.txt  CustomButton.qml  Main.qml  exampleclass.cpp  exampleclass.h  main.cpp
Projects/QtQuickCppFunctionCall/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  main.cpp
Projects/QtQuickCurvyBackground/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickCurvyBackground2/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickCurvyBackground3/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickCustomButton/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickCustomCheckBox/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickCustomComboBox/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickCustomDialog/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickCustomExpander/: CMakeLists.txt  CustomExpander.qml  Main.qml  main.cpp
Projects/QtQuickCustomExpanderMenubar/: CMakeLists.txt  CustomExpanderMenubar.qml  Main.qml  main.cpp
Projects/QtQuickCustomItems/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickCustomNotification/: CMakeLists.txt  CustomNotification.qml  Main.qml  main.cpp
Projects/QtQuickCustomSearchField/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickCustomTextFieldWindows/: CMakeLists.txt  Main.qml  WindowsTextField.qml  main.cpp
Projects/QtQuickCustomToolTip/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickDarkLightMode/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  main.cpp
Projects/QtQuickDashboardImageLabelDesign/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickDashboardLabelDesign/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickDesktopDashboard/: CMakeLists.txt  Main.qml  Page1.qml  Page1Form.qml  main.cpp
Projects/QtQuickDesktopTipCalculator/: CMakeLists.txt  Main.qml  backend.cpp  backend.hpp  main.cpp
Projects/QtQuickDial/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickDigitalClock/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickDoubleClickEvent/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickDragAndDrop/: CMakeLists.txt  main.cpp  main.qml
Projects/QtQuickDragDrop/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickDropDownMenu/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickDynamicObject/: CMakeLists.txt  Main.qml  SecondWindow.qml  main.cpp
Projects/QtQuickFileCreateByButtonClick/: CMakeLists.txt  Main.qml  backend.cpp  backend.hpp  main.cpp
Projects/QtQuickFileDialog/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickFlickableExample/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickFlickableZoomableImage/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickFrame/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickFramelessWindow/: CMakeLists.txt  Main.qml
Projects/QtQuickFramelessWindow2/: CMakeLists.txt  Main.qml  main.cpp  settings.qml
Projects/QtQuickGithubLoginDesktop/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickGreetingMessage/: CMakeLists.txt  CMakeLists.txt.user.1292764  Main.qml  backend.cpp  backend.hpp  main.cpp
Projects/QtQuickGridView/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickGroupBox/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickIconLabelSwitch/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickImageOpacity/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickImageViewer/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickInfoPageDesign/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickLabelSwitchDesign/: CMakeLists.txt  Main.qml  (+2 more)
Projects/QtQuickLoginPageDesign/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickMakeButton/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickNumberAnimation3/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickOpenDialogBox/: CMakeLists.txt  Main.qml  main.cpp
Projects/QtQuickSQLiteExample/: CMakeLists.txt  Main.qml  databasemanager.cpp  databasemanager.hpp  main.cpp
Projects/QtQuickSQLiteExample2/: CMakeLists.txt  Main.qml  database.cpp  database.hpp  main.cpp
Projects/QtQuickSimpleSqliteUserInfoProject/: CMakeLists.txt  CustomNotification.qml  Main.qml  databasemanager.cpp  databasemanager.hpp  main.cpp
Projects/QtQuickTableView3/: CMakeLists.txt  Main.qml  main.cpp
(+235 files in other folders)
